--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,12 +25,12 @@ steps:
     entrypoint: sh
     args:
       - "-c"
-      - if [[ "$_DRIFT_DETECT" == "true" ]]; then
-          echo "Running drift detection"
-          terraform plan -no-color --detailed-exitcode 
-        else
-          terraform plan -no-color
-        fi
+      - | if [[ "$_DRIFT_DETECT" == "true" ]]; then
+            echo "Running drift detection"
+            terraform plan -no-color --detailed-exitcode 
+          else
+            terraform plan -no-color
+          fi
     volumes:
       - name: "ssh"
         path: /root/.ssh
