drift detection added

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,5 @@
-substitutions: 
+substitutions:
   _DRIFT_DETECT: "false"
-
 steps:
   - id: "init"
     name: hashicorp/terraform:1.12.2
@@ -24,15 +23,24 @@ steps:
     name: hashicorp/terraform:1.12.2
     entrypoint: sh
     args:
-      - "-c"
-      - | if [[ "$_DRIFT_DETECT" == "true" ]]; then
-            echo "Running drift detection"
-            terraform plan -no-color --detailed-exitcode 
-          else
-            terraform plan -no-color
-          fi
+      - -c
+      - "if [[ \"$_DRIFT_DETECT\" == \"true\" ]]; then\n    echo \"Running drift detection\"\n    terraform plan -no-color --detailed-exitcode \n  else\n    terraform plan -no-color\n  fi\n"
     volumes:
       - name: "ssh"
         path: /root/.ssh
 timeout: 600s # default 10 minutes
 logsBucket: gs://sp-archived-drive
+substitutions:
+  _RUN_TESTS: "true"
+steps:
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        if [[ "$_RUN_TESTS" == "true" ]]; then
+          echo "Running tests..."
+          ./run-tests.sh
+        else
+          echo "Skipping tests"
+        fi
