--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,3 @@
-substitutions:
-  _DRIFT_DETECT: "false"
 steps:
   - id: "init"
     name: hashicorp/terraform:1.12.2
@@ -24,7 +22,7 @@ steps:
     entrypoint: sh
     args:
       - "-c"
-      - terraform plan -no-color --detailed-exitcode
+      - terraform plan -no-color
     volumes:
       - name: "ssh"
         path: /root/.ssh
